# akm-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.agents/: akm.json
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  release-issue.sh
src/: config.rs  editor.rs  error.rs  git.rs  github.rs  lib.rs  main.rs  paths.rs
src/artifacts/: mod.rs
src/commands/: completions.rs  config.rs  mod.rs  setup.rs  sync.rs  update.rs
src/commands/artifacts/: mod.rs  sync.rs
src/commands/instructions/: edit.rs  mod.rs  scaffold.rs  sync.rs
src/commands/skills/: add.rs  clean.rs  edit.rs  import.rs  libgen.rs  (+12 more)
src/completions/: dynamic.rs  mod.rs
src/registry/: git.rs  mod.rs
src/shell/: akm-init.sh  mod.rs  tools.json
src/tui/: app.rs  detail.rs  edit.rs  event.rs  list.rs  mod.rs  status.rs  theme.rs
src/update/: download.rs  mod.rs  version_check.rs
tests/: artifacts_sync_test.rs  artifacts_test.rs  completions_test.rs  config_test.rs  frontmatter_test.rs  git_test.rs  help_test.rs  instructions_test.rs  library_test.rs  manifest_test.rs  paths_test.rs  setup_test.rs  shell_test.rs  skills_commands_test.rs  sync_test.rs  tui_plain_test.rs  update_test.rs
tests/snapshots/: completions_test__completions_bash.snap  completions_test__completions_fish.snap  completions_test__completions_zsh.snap  config_test__config_print_all_snapshot.snap  help_test__help_output.snap  help_test__import_help_output.snap  instructions_test__instructions_scaffold_fresh.snap  instructions_test__instructions_sync_no_source.snap  instructions_test__instructions_sync_success.snap  shell_test__shell_init.snap  update_test__update_already_up_to_date.snap  update_test__update_notice_format.snap  update_test__version_output.snap
