[package]
name = "akm"
version = "1.0.0-alpha.7"
edition = "2021"
rust-version = "1.88.0"
description = "Agent Kit Manager — manage reusable LLM skills, artifacts, and instructions"
license = "MIT"
repository = "https://github.com/akm-rs/akm-rs"
homepage = "https://akm.raphaelsimon.fr"
documentation = "https://docs.rs/akm"
keywords = ["cli", "llm", "skills", "agent", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  ".github/",
  "scripts/",
  "tests/",
  "AGENTS.md",
  "CLAUDE.md",
]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
thiserror = "2"
dirs = "6"
libc = "0.2"
ureq = { version = "3", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
serial_test = "3"
